@@ -1,4 +1,4 @@
-MEDIUM_SUPPORTED = cdrom netboot demo miniiso
+MEDIUM_SUPPORTED = cdrom netboot miniiso
 
 # The version of the kernel to use.
 KERNELVERSION = 2.4.25-1-generic
