@@ -1,11 +1,0 @@
-# No kernel image is needed for the demo.
-KERNELVERSION = 2.4.22-r4k-ip22 2.4.22-r5k-ip22
-KERNEL_FLAVOUR = di
-KERNELIMAGEVERSION = $(KERNELVERSION)
-KERNELNAME =
-
-# No files in DEST.
-TARGET = $(STAMPS)tree-demo-stamp
-
-# HACK Alert: pkg-lists/ is still sorted by TYPE instead of a dir hierarchy.
-TYPE = demo
