@@ -1,12 +1,0 @@
-# The version of the kernel to use.
-KERNELVERSION = 2.4.19-r3k-kn02 2.4.19-r4k-kn04
-KERNEL_FLAVOUR = di
-KERNELIMAGEVERSION = $(KERNELVERSION)
-# No kernel image is needed for the demo.
-KERNELNAME =
-
-# No files in DEST.
-TARGET = $(STAMPS)tree-demo-stamp
-
-# HACK Alert: pkg-lists/ is still sorted by TYPE instead of a dir hierarchy.
-TYPE = demo
