@@ -1,4 +1,4 @@
-SUBARCH_SUPPORTED = powerpc power3 power4 powerpc-small apus demo
+SUBARCH_SUPPORTED = powerpc power3 power4 powerpc-small apus
 
 EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
 
