@@ -1,13 +1,0 @@
-# No kernel is included.
-KERNELNAME =
-KERNELIMAGEVERSION = $(BASEVERSION)-sparc64
-KERNEL_FLAVOUR = di
-
-TYPE = demo
-
-# No files in DEST.
-TARGET = $(STAMPS)tree-demo-stamp
- 
-# FIXME: Temporary fix, these files should be in a udeb!
-EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
-
