@@ -1,13 +1,0 @@
-#include "base"
-#include "kernel"
-
-busybox-cvs-udeb
-languagechooser
-countrychooser
-iso-3166-udeb
-cdebconf-newt-udeb
-rootskel-locale
-di-utils-terminfo
-nano-udeb
-
-di-utils-exit-installer
