@@ -1,21 +1,0 @@
-socket-modules-${kernel:Version}
-usb-modules-${kernel:Version}
-floppy-modules-${kernel:Version}
-fat-modules-${kernel:Version}
-input-modules-${kernel:Version}
-
-console-keymaps-at
-console-keymaps-usb
-discover1-data-udeb
-discover1-udeb
-fb-modules-${kernel:Version}
-
-nic-shared-modules-${kernel:Version}
-nic-extra-modules-${kernel:Version}
-nic-modules-${kernel:Version}
-isa-pnp-modules-${kernel:Version}
-ide-core-modules-${kernel:Version}
-ide-modules-${kernel:Version}
-
-hw-detect
-bogl-bterm-udeb
