@@ -1,12 +1,0 @@
-console-keymaps-atari
-console-keymaps-amiga
-console-keymaps-mac
-console-keymaps-at
-discover1-data-udeb
-discover1-udeb
-kbd-chooser
-userdevfs
-cdebconf-priority
-
-hw-detect
-bogl-bterm-udeb
