@@ -1,22 +1,0 @@
-.TH D-I-DEMO 8
-.SH NAME
-d-i-demo \- demo of the debian installer
-.SH SYNOPSIS
-d-i-demo
-.SH DESCRIPTION
-Enter a demo of the debian installer. The demo will run in a chroot so that
-it resembles a newly booted debian installer. For a display as close to the
-real installer as possible, run it from the linux console.
-.SH KERNEL
-The installer demo works best if you are running the same stock debian
-kernel that is used for the debian installer on your architecture. Then the
-installer can load kernel modules, which lets it demo some of the hardware
-detection and network setup capabilities of the debian installer. The
-debian-installer-demo package recommends the kernel package that the
-installer needs, but it cannot ensure that you are running that kernel.
-If you run the demo under a different kernel, don't be suprised if it
-looks bad or fails.
-.SH WARNING
-While this is billed as a "demo" of the debian installer, it can still
-access your hardware, and if not used with caution, can destroy your system
-(possibly replacing it with a fresh Debian install). You have been warned!
