@@ -8,6 +8,12 @@ debian-installer (20040331) UNRELEASED; urgency=low
       kernel in the status file, to prevent anna from doing bad things, and
       also will provide a System.map for depmod to run against, fixing
       builds on 2.6 kernels.
+    - Removed the demo type.
+    - Changed make demo and make shell to per-type targets.
+    - Remove broken and useless debian-installer-demo package.
+      Closes: #218560
+    - Add a debian-installer-manual package, mostly to serve as the autobilder
+      sentinal package.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 30 Mar 2004 16:24:08 -0500
 
